--- a/star_counter/pubspec.yaml
+++ b/star_counter/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.15
+  github: ^9.15.1
+  intl: ^0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
