url_launcher package is added

--- a/star_counter/pubspec.yaml
+++ b/star_counter/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_markdown: ^0.6.15
   github: ^9.15.1
   intl: ^0.18.1
+  url_launcher: ^6.1.11
 
 
   # The following adds the Cupertino Icons font to your application.
